# jointfit_nova

./: .gitignore  CMakeLists.txt  README.md
CAFAna/: .gitignore  CMakeLists.txt  GNUmakefile  checkout.sh  load_libs.C  run.C  state_v1.root  test.C
CAFAna/CAFAna/: GNUmakefile  load_libs.C
CAFAna/CAFAna/Core/: ISyst.h  OscillatableSpectrum.cxx  OscillatableSpectrum.h  Ratio.cxx  ReweightableSpectrum.cxx  ReweightableSpectrum.h  Spectrum.cxx  Spectrum.h  SystShifts.cxx
CAFAna/CAFAna/Experiment/: SingleSampleExperiment.h  ToyExperiment.cxx  ToyExperiment.h
CAFAna/CAFAna/Extrap/: GNUmakefile  IExtrap.cxx  IExtrap.h  TrivialExtrap.cxx
CAFAna/CAFAna/Prediction/: GNUmakefile  IPrediction.h  PredictionExtrap.h  PredictionInterp.cxx  PredictionInterp.h
CAFAna/Core/: CMakeLists.txt  ISyst.cxx  ISyst.h  LoadFromFile.cxx  OscillatableSpectrum.cxx  OscillatableSpectrum.h  ReweightableSpectrum.cxx  ReweightableSpectrum.h  Spectrum.cxx  SystShifts.cxx  SystShifts.h  Utilities.cxx  Utilities.h
CAFAna/Experiment/: CMakeLists.txt  IExperiment.cxx  NOvALLAdaptor.cxx  NOvALLAdaptor.h  SingleSampleExperiment.cxx  ToyExperiment.cxx  ToyExperiment.h
CAFAna/Extrap/: CMakeLists.txt  TrivialExtrap.h
CAFAna/OscLib/func/: IOscCalculator.h  OscCalculatorPMNS.h
CAFAna/OscLib/test/: testOsc.cc
CAFAna/Prediction/: CMakeLists.txt  IPrediction.cxx  IPrediction.h  PredictionExtrap.cxx  PredictionInterp.cxx  PredictionNoExtrap.cxx  PredictionNoExtrap.h
CAFAna/StandardRecord/: StandardRecord.h
CAFAna/Vars/: CMakeLists.txt
OscLib/: CMakeLists.txt
OscLib/func/: CMakeLists.txt  IOscCalculator.cxx  OscCalculator.cxx  PMNS.cxx  PMNSOpt.cxx
OscLib/test/: CMakeLists.txt  GNUmakefile  testOscRndm.cc
Utilities/: CMakeLists.txt
